--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            December 6th 2020, 11:52:00 am
+                            January 29th 2021, 6:25:21 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
